--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+bubblewrap (0.1.3-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+    - bring back --set-hostname, the upstream fix for CVE-2016-8659
+      makes it no longer a vulnerability
+
+ -- Simon McVittie <smcv@debian.org>  Sat, 15 Oct 2016 07:47:34 +0100
+
 bubblewrap (0.1.2-2) unstable; urgency=high
 
   * Revert addition of --set-hostname as a short-term fix for
