--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,17 @@
-bubblewrap (0.4.0-2) UNRELEASED; urgency=medium
+bubblewrap (0.4.1-1) UNRELEASED; urgency=medium
 
+  * New upstream release
+    - Fixes a root privilege escalation vulnerability introduced in 0.4.0,
+      in cases where the kernel allows creation of user namespaces by
+      unprivileged users and bwrap is (unnecessarily) setuid root.
+      Debian systems are vulnerable if
+      /proc/sys/kernel/unprivileged_userns_clone (default 0) has been
+      changed to 1, or if using an upstream kernel instead of a Debian
+      kernel.
+      Ubuntu systems are not normally vulnerable, because bwrap is not
+      normally setuid there.
+      (GHSA-j2qp-rvxj-43vj, CVE ID pending)
+    - Fixes test failure with libcap >= 2.29 (Closes: #951577)
   * Update various URLs from https://github.com/projectatomic/bubblewrap
     to https://github.com/containers/bubblewrap
   * Set upstream metadata fields: Repository.
