--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ bubblewrap (0.4.1-2) UNRELEASED; urgency=medium
 
   * d/gbp.conf: Rename development branch to debian/latest
   * Standards-Version: 4.5.1 (no changes required)
+  * Reference CVE-2020-5291 in previous changelog entry
 
  -- Simon McVittie <smcv@debian.org>  Fri, 01 Jan 2021 14:02:42 +0000
 
@@ -17,7 +18,7 @@ bubblewrap (0.4.1-1) unstable; urgency=high
       kernel.
       Ubuntu systems are not normally vulnerable, because bwrap is not
       normally setuid there.
-      (GHSA-j2qp-rvxj-43vj, CVE ID pending)
+      (GHSA-j2qp-rvxj-43vj, CVE-2020-5291)
     - Fixes test failure with libcap >= 2.29 (Closes: #951577)
   * Update various URLs from https://github.com/projectatomic/bubblewrap
     to https://github.com/containers/bubblewrap
